--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="normalize.css">
   <title>Some game</title>
 </head>
 <body>
-  <div class="score"></div>
   <div class="game">
+    <div class="score"></div>
     <div class="start">click there for starting game</div>
     <div class="gameArea"></div>
   </div>
